--- a/engihack_file.html
+++ b/engihack_file.html
@@ -121,14 +121,14 @@
 
                     <!-- Agregar una imagen debajo del texto -->
                     <img src="assets/img/portfolio/img_equip.png" alt="Descripción de la imagen" style="margin-top: 15px; max-width: 100%; height: auto; border-radius: 10px;">
-                    <p style="margin-top: 10px;">
+                    <p style="text-align: justify; margin-top: 10px;">
                         <b>This hackathon took place on October 5th at Museu Nacional de la Ciència i la Tècnica de Catalunya (MNACTEC) in Terrassa, bringing together around 20 teams composed of engineering students from various universities across Catalonia. All teams shared a common goal: finding solutions to some of today’s most pressing challenges, including the climate crisis.</b>
                     </p>
-                    <p>
+                    <p style="text-align: justify;">
                         Our solution, <b>𝐒𝐀𝐑𝐀 (𝐒𝐢𝐬𝐭𝐞𝐦𝐚 𝐀𝐮𝐭𝐨𝐦𝐚̀𝐭𝐢𝐜 𝐝𝐞𝐥 𝐑𝐞𝐚𝐩𝐫𝐨𝐟𝐢𝐭𝐚𝐦𝐞𝐧𝐭 𝐝𝐞 𝐥’𝐀𝐢𝐠𝐮𝐚)</b>, is based on collecting the cold water that flows from the shower while we wait for it to warm up. This clean water is stored in a small tank to be reused for household tasks like watering plants or even for drinking, as it is potable. The system can be installed externally, requiring no wall or floor construction, which enhances its feasibility and helps reduce costs.
                     </p>
                     <img src="assets/img/portfolio/img_diposit.png" alt="Descripción de la imagen" style="margin-top: 5px; width: 50%; height: auto; border-radius: 10px; position: relative; left: 175px;">
-                    <p style="margin-top: 30px;">
+                    <p style="text-align: justify; margin-top: 30px;">
                         We also had the opportunity to share our project on various media outlets, including the <b><em>TV3</em></b> television program <b><em>TotEsMou3Cat</em></b> and the <b><em>CatalunyaRàdio</em></b> radio program <b><em>RevolucióCatRàdio</em></b></em>, and <b><em>SERCatalunya</em></b>. Personally, I’m very grateful to <b>Xantal Llavina Aguilar</b> and the <b><em>RevolucióCatRàdio</em></b> team for giving me the chance to join their radio program, where I discussed the <em>SARA</em> project alongside <b>Laura Ivern</b>, Deputy Director at Enginyers Industrials de Catalunya. It was an incredible experience that I will never forget.
                     </p>
                     <img src="assets/img/portfolio/img_radio2.jpg" alt="Descripción de la imagen" style="margin-top: 5px; width: 75%; height: auto; border-radius: 10px; position: relative; left: 80px;">
