--- a/gameoflife_file.html
+++ b/gameoflife_file.html
@@ -121,12 +121,15 @@
 
                     <!-- Agregar una imagen debajo del texto -->
                     <img src="assets/img/portfolio/img_conway.gif" alt="Descripción de la imagen" style="margin-top: 15px; max-width: 50%; height: auto; border-radius: 10px; margin-left: 110px; clip-path: inset(0 10px 10px 0);">
-                  <p style="margin-top: 30px;">
-                      You can check the full source code on <b>GitHub</b> using the following link:
-                      <a href="https://github.com/marcarias/game_of_life" target="_blank" style="color: #007bff; text-decoration: none;">
-                          GitHub Repository
-                      </a>
-                  </p>              
+                    <p style="text-align: justify; margin-top: 10px;">
+                        This project consists of the implementation of <b>Conway's Game of Life</b> in the C programming language. The main objective is to simulate the evolution of cellular automata over time based on a set of simple rules. The implementation focuses not only on the game logic, but also on the <b>efficient use of memory</b> through dynamic allocation with <b>malloc</b>, proper use of <b>pointers</b>, and <b>structured memory management</b>. Several initial configurations are tested to observe different behaviors and patterns, including <b>Diehard, R-pentomino, In-conf, and Acorn</b>, each offering unique dynamics and complexity. This allows for analysis of both performance and memory handling in various scenarios.
+                    </p>
+                    <p style="margin-top: 30px;">
+                        You can check the full source code on <b>GitHub</b> using the following link:
+                        <a href="https://github.com/marcarias/game_of_life" target="_blank" style="color: #007bff; text-decoration: none;">
+                            GitHub Repository
+                        </a>
+                    </p>              
                 </div>
             </div>
 
