--- a/hand_file.html
+++ b/hand_file.html
@@ -131,7 +131,7 @@
                     <video autoplay muted loop style="margin-top: 0px; width: 100%; height: auto; border-radius: 0px; position: relative; left: 0px;">
                         <source src="assets/vid/vid_hand.mp4" type="video/mp4">
                         Your browser does not support the video tag.
-                    </video> <p style="margin-top: 10px;">
+                    </video> <p style="text-align: justify; margin-top: 10px;">
                         This project presents the design and implementation of a <b>real-time hand gesture recognition and tracking system</b> using MATLAB. By capturing live video from a webcam, the system detects skin regions based on <b>YCbCr color segmentation</b>, isolates the hand, and classifies its gesture among predefined signs using <b>region-based features</b> and <b>slope density functions</b>. A <b>Mahalanobis classifier</b> enables fast and accurate gesture recognition, making the application efficient enough for real-time interaction. 
                     </p>
 
