--- a/headpose_file.html
+++ b/headpose_file.html
@@ -125,18 +125,18 @@
                         <source src="assets/vid/vid_headpose.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video> 
-                    <p style="margin-top: 10px;">
+                    <p style="text-align: justify; margin-top: 10px;">
                         The main goal of this project was to estimate the <b>3D position and orientation of the head in real time</b> using just a standard laptop webcam. Several methods were explored, all based on <b>classic computer vision techniques</b> to avoid training AI models and keep the system as lightweight and computationally efficient as possible.
                     </p>
 
-                    <p style="margin-top: 0px;">
+                    <p style="text-align: justify; margin-top: 0px;">
                         You can check the source code on <b>GitHub</b> using the following link:
                         <a href="https://github.com/marcarias/3d_head_pose_estimation/blob/main/main.py" target="_blank" style="color: #007bff; text-decoration: none;">
                             GitHub Repository
                         </a>
                     </p>  
                                        
-                    <p style="margin-top: 0px;">
+                    <p style="text-align: justify; margin-top: 0px;">
                         You can find the full detailed explanation of the project on <a href="assets/pdf/actv_headpose.pdf" target="_blank">this PDF</a>.
                     </p>                  
                                 
