--- a/index.html
+++ b/index.html
@@ -132,15 +132,15 @@
           <div class="col-12">
             <div class="about-story">
               <h4 style="margin-top: 20px;"><strong>Academic journey</strong></h4>
-              <p>I began my academic journey in Tarragona, Spain, where I completed a <em>technological baccalaureate</em>. Later, I moved to Barcelona to pursue a Bachelor’s degree in <strong>Industrial Technologies Engineering at UPC (Universitat Politècnica de Catalunya), ETSEIB</strong>. It was a challenging transition but I faced it with motivation.</p>
-              <p>I truly enjoyed my studies, but I also wanted to specialize in a specific field — <span style="color: orange; font-weight: bold;">ARTIFICIAL INTELLIGENCE</span> and <span style="color: rgb(0, 64, 255); font-weight: bold;">ROBOTICS</span>. However, I didn’t want to step away from my foundation in industrial engineering. Then, I applied for the <strong>Double Master’s program</strong> in <strong>Industrial Engineering and Automatic Control & Robotics</strong>, also at <strong>UPC, ETSEIB</strong>.</p>
-              <p>Most recently, I applied to carry out my <strong>Master’s Thesis</strong> at <strong>EPFL (École Polytechnique Fédérale de Lausanne), in Switzerland</strong>. I’m now part of the <strong>DISAL</strong> lab, working on my thesis titled <strong><em>"Belief Sharing and Merging of a Multi-Robot System for Gas Source Localization Task"</em></strong>, which is planned to be presented in late July 2025.</p>
+              <p style="text-align: justify;">I began my academic journey in Tarragona, Spain, where I completed a <em>technological baccalaureate</em>. Later, I moved to Barcelona to pursue a Bachelor’s degree in <strong>Industrial Technologies Engineering at UPC (Universitat Politècnica de Catalunya), ETSEIB</strong>. It was a challenging transition but I faced it with motivation.</p>
+              <p style="text-align: justify;">I truly enjoyed my studies, but I also wanted to specialize in a specific field — <span style="color: orange; font-weight: bold;">ARTIFICIAL INTELLIGENCE</span> and <span style="color: rgb(0, 64, 255); font-weight: bold;">ROBOTICS</span>. However, I didn’t want to step away from my foundation in industrial engineering. Then, I applied for the <strong>Double Master’s program</strong> in <strong>Industrial Engineering and Automatic Control & Robotics</strong>, also at <strong>UPC, ETSEIB</strong>.</p>
+              <p style="text-align: justify;">Most recently, I applied to carry out my <strong>Master’s Thesis</strong> at <strong>EPFL (École Polytechnique Fédérale de Lausanne), in Switzerland</strong>. I’m now part of the <strong>DISAL</strong> lab, working on my thesis titled <strong><em>Belief Sharing and Merging of a Multi-Robot System for Gas Source Localization Task</em></strong>, which is planned to be presented in late July 2025.</p>
 
               <h4 style="margin-top: 40px;"><strong>Interests</strong></h4>
-              <p>As a kid, I loved spending time drawing and crafting. Years later, when I discovered how mathematics could be applied to images, I was fascinated. That moment opened the door to <span style="color: rgb(25, 190, 0); font-weight: bold;">COMPUTER VISION</span>, a field that felt like magic — turning raw pixels into understanding. It became clear to me: this was how robots could “see,” how they could begin to <strong>perceive the world like we do</strong>.</p>
-              <p>As I delved deeper into this world, I encountered <span style="color: orange; font-weight: bold;">ARTIFICIAL INTELLIGENCE</span>, and something clicked. I was amazed that something so abstract — statistical models, probabilities, data — could give rise to <strong>intelligent behavior</strong>. <strong>If Computer Vision gives robots eyes, AI gives them a brain</strong>.</p>
-              <p>But perception and reasoning weren’t enough for me — I wanted those ideas to move. That’s when <span style="color: rgb(0, 64, 255); font-weight: bold;">ROBOTICS</span> brought everything together. Robotics gave me the hands <strong>to match the eyes and the brain, enabling interaction with the world</strong>.</p>
-              <p>To complete the picture, I explored algorithms for <span style="color: rgb(186, 0, 189); font-weight: bold;">NAVIGATION AND LOCALIZATION</span>, giving machines the ability to understand where they are and where they’re going. It’s the final piece of the puzzle — granting them <strong>freedom of movement and true autonomy in the physical world</strong>.</p>
+              <p style="text-align: justify;">As a kid, I loved spending time drawing and crafting. Years later, when I discovered how mathematics could be applied to images, I was fascinated. That moment opened the door to <span style="color: rgb(25, 190, 0); font-weight: bold;">COMPUTER VISION</span>, a field that felt like magic — turning raw pixels into understanding. It became clear to me: this was how robots could “see,” how they could begin to <strong>perceive the world like we do</strong>.</p>
+              <p style="text-align: justify;">As I delved deeper into this world, I encountered <span style="color: orange; font-weight: bold;">ARTIFICIAL INTELLIGENCE</span>, and something clicked. I was amazed that something so abstract — statistical models, probabilities, data — could give rise to <strong>intelligent behavior</strong>. <strong>If Computer Vision gives robots eyes, AI gives them a brain</strong>.</p>
+              <p style="text-align: justify;">But perception and reasoning weren’t enough for me — I wanted those ideas to move. That’s when <span style="color: rgb(0, 64, 255); font-weight: bold;">ROBOTICS</span> brought everything together. Robotics gave me the hands <strong>to match the eyes and the brain, enabling interaction with the world</strong>.</p>
+              <p style="text-align: justify;">To complete the picture, I explored algorithms for <span style="color: rgb(186, 0, 189); font-weight: bold;">NAVIGATION AND LOCALIZATION</span>, giving machines the ability to understand where they are and where they’re going. It’s the final piece of the puzzle — granting them <strong>freedom of movement and true autonomy in the physical world</strong>.</p>
               <p>My academic record reflects this journey through:</p>
               <div style="text-align: center;">
                 <ul style="display: inline-block; text-align: left;">
@@ -266,7 +266,7 @@
               <!--<p><b>Intelligent Systems and Algorithms Laboratory (DISAL)</b><br><em>École Polytechnique Fédérale de Lausanne (EPFL), Lausanne (Switzerland)</em></p>-->
               <p><b>Distributed Intelligent Systems and Algorithms Laboratory (DISAL)</b></p>
               <p style="margin: -3px; margin-left: 1px; color: #555555"><em>École Polytechnique Fédérale de Lausanne (EPFL), Lausanne (Switzerland)</em></p>
-              <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
+              <ul style="text-align: justify; color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
                 <li>
                   Currently working on the project 
                   <strong><em>'Belief Sharing and Merging of a Multi-Robot System for Gas Source Localization'</em></strong> 
@@ -288,7 +288,7 @@
                 <b>Escola Tècnica Superior d'Enginyeria Industrial de Barcelona (ETSEIB)</b>
               </p>
               <p style="margin: -3px; margin-left: 1px; color: #555555"><em>Universitat Politècnica de Catalunya (UPC), Barcelona (Spain)</em></p>
-              <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
+              <ul style="text-align: justify; color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
                 <li>
                   Specialized in <strong>Robotics, Computer Vision, Machine Learning, Navigation, Localization</strong>, and related fields.
                 </li>
@@ -305,7 +305,7 @@
                 <b>Escola Tècnica Superior d'Enginyeria Industrial de Barcelona (ETSEIB)</b>
               </p>
               <p style="margin: -3px; margin-left: 1px; color: #555555"><em>Universitat Politècnica de Catalunya (UPC), Barcelona (Spain)</em></p>
-              <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
+              <ul style="text-align: justify; color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
                 <li>
                   Specially focused on <strong>Business Administration and Management</strong>, <strong>Industrial Organization</strong>, and addressing advanced technical topics relevant to the degree.
                 </li>
@@ -319,7 +319,7 @@
                 <b>Escola Tècnica Superior d'Enginyeria Industrial de Barcelona (ETSEIB)</b>
               </p>
               <p style="margin: -3px; margin-left: 1px; color: #555555"><em>Universitat Politècnica de Catalunya (UPC), Barcelona (Spain)</em></p>
-              <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
+              <ul style="text-align: justify; color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
                 <li>Provided me with a solid foundation in <strong>Engineering</strong>, covering nearly all areas of the discipline, including: <strong>Mechanical Engineering, Electrical Engineering, Materials Science</strong> and <strong>Thermodynamics</strong>.</li>
                 <li>Gained a solid foundation in <strong>Python</strong>.</li>
               </ul>
@@ -335,7 +335,7 @@
               <h4 style="color: #000000; font-size: 18px;"><strong>AI & Robotics Engineer</strong></h4>
               <h5 style="display: inline-block; background-color: #f0f8ff; color: #317ccd; padding: 5px 10px; border-radius: 5px; font-weight: bold; font-size: 14px; border: 1px solid #317ccd;">Aug. 2024 - Feb. 2025</h5>
               <p><b>ENKI Technologies S.L. Barcelona (Spain)</b></p>
-              <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
+              <ul style="text-align: justify; color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
                 <li>
                   Developed an API for real-time Pest & Disease detection using AI-based Computer Vision techniques, mainly using <strong>Python</strong> programming language and the <strong>FastAPI</strong> framework. Additional libraries, such as <strong>Pandas</strong> and <strong>TensorFlow</strong>, were also employed. The API was deployed to the Cloud using <strong>AWS</strong>.
                 </li>
@@ -349,7 +349,7 @@
               <h4 style="color: #000000; font-size: 18px;"><strong>Junior Consultant</strong></h4>
               <h5 style="display: inline-block; background-color: #f0f8ff; color: #317ccd; padding: 5px 10px; border-radius: 5px; font-weight: bold; font-size: 14px; border: 1px solid #317ccd;">Feb. 2022 - Nov. 2022</h5>
               <p><b>InOrbis Analytics S.L. Barcelona (Spain)</b></p>
-              <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
+              <ul style="text-align: justify; color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
                 <li>
                   Extracted and analyzed large datasets using advanced <strong>SQL</strong> queries.
                 </li>
@@ -365,7 +365,7 @@
               <h5 style="display: inline-block; background-color: #f0f8ff; color: #317ccd; padding: 5px 10px; border-radius: 5px; font-weight: bold; font-size: 14px; border: 1px solid #317ccd;">Oct. 2024</h5>
               <p><b>Museu Nacional de la Ciència i la Tècnica de Catalunya (MNACTEC)</b></p>
               <p style="margin: -3px; margin-left: 1px; color: #555555"><em>Enginyers Industrials de Catalunya (EIC), Barcelona (Spain)</em></p>
-              <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
+              <ul style="text-align: justify; color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
                 <li>
                   Winner (1st Prize) among 20 teams during a 12-hour hackathon
                 </li>
@@ -796,6 +796,30 @@
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
+              <a href="ballintube_file.html" style="text-decoration: none; color: inherit;">
+                <div class="portfolio-content h-100" 
+                    style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
+
+                  <!-- Imagen y superposición -->
+                  <img src="assets/img/portfolio/img_balltube.png" 
+                      style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
+
+                  <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
+                              background: rgba(0, 0, 0, 0.7); color: white; 
+                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
+                              opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
+                              border-radius: 15px;" 
+                      onmouseover="this.style.opacity='1';" 
+                      onmouseout="this.style.opacity='0';">
+                    <strong>BALL IN TUBE</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Embedded and Real-Time Systems</em></span>
+                  </div>
+
+                </div>
+              </a>
+            </div>
+                        
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
               <a href="socialforcemodel_file.html" style="text-decoration: none; color: inherit;">
                 <div class="portfolio-content h-100" 
                     style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
@@ -819,29 +843,7 @@
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
-              <a href="ballintube_file.html" style="text-decoration: none; color: inherit;">
-                <div class="portfolio-content h-100" 
-                    style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
 
-                  <!-- Imagen y superposición -->
-                  <img src="assets/img/portfolio/img_balltube.png" 
-                      style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
-
-                  <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
-                              background: rgba(0, 0, 0, 0.7); color: white; 
-                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
-                              opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
-                              border-radius: 15px;" 
-                      onmouseover="this.style.opacity='1';" 
-                      onmouseout="this.style.opacity='0';">
-                    <strong>BALL IN TUBE</strong>
-                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Embedded and Real-Time Systems</em></span>
-                  </div>
-
-                </div>
-              </a>
-            </div>
           </div><!-- End Portfolio Container -->
 
 
