--- a/mold_file.html
+++ b/mold_file.html
@@ -132,7 +132,7 @@
                           style="width: 100%; height: auto; clip-path: inset(0 100px 0 0);">
                       <source src="assets/vid/vid_mold_detection.mp4" type="video/mp4">
                       Your browser does not support the video tag.
-                    </video><p style="margin-top: 10px;">
+                    </video><p style="text-align: justify; margin-top: 10px;">
                         Detecting mold in microgreens just got smarter with the use of <b>AI Computer Vision methods</b>, concretely <b>Instance Segmentation techniques</b>. This advanced approach identifies and highlights mold-affected areas directly within an image, enabling precise monitoring and more effective intervention. By isolating these affected regions, growers can address issues promptly, ensuring healthier and more productive crops.
                     </p>    
 
