--- a/montecarlo_file.html
+++ b/montecarlo_file.html
@@ -121,10 +121,10 @@
 
                     <!-- Agregar una imagen debajo del texto -->
                     <img src="assets/img/portfolio/gif_montecarlo.gif" alt="Descripción de la imagen" style="margin-top: 0px; max-width: 80%; height: auto; border-radius: 10px;">
-                    <p style="margin-top: 30px;">
+                    <p style="text-align: justify; margin-top: 30px;">
                         In this project, we work with a <b>mobile robot</b> that needs to <b>figure out its position on a known map</b>, without using GPS. To do this, we use a method called <b>Monte Carlo Localization</b>, which simulates many possible robot positions (called particles). As the robot moves and scans its surroundings with a <b>Lidar sensor</b>, it gradually eliminates the less likely positions and focuses on the ones that make the most sense. We tested this technique on different maps, observing how the accuracy changes depending on the <b>number of particles</b> used, and how the robot “figures out” where it is as it moves around.
                     </p>
-                    <p style="margin-top: 30px;">
+                    <p style="text-align: justify; margin-top: 30px;">
                         You can check the source code on <b>GitHub</b> using the following link:
                         <a href="https://github.com/marcarias/mobile_robots/tree/main/MATLAB_MonteCarlo_localization" target="_blank" style="color: #007bff; text-decoration: none;">
                             GitHub Repository
