--- a/roboticchess_file.html
+++ b/roboticchess_file.html
@@ -125,15 +125,15 @@
                         <source src="assets/vid/vid_ur3_sim.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video> 
-                    <p style="margin-top: 10px;">
+                    <p style="text-align: justify; margin-top: 10px;">
                         Using a UR3 robotic arm and the <b>Robot Operating System (ROS)</b>, we designed a system capable of detecting a physical chessboard, recognizing the position of each piece through computer vision, planning optimal moves using a chess engine, and executing them precisely with the robot. 
                     </p>
                     <img src="assets/img/portfolio/img_chess1.png" alt="Descripción de la imagen" style="margin-top: 10px; width: 60%; height: auto; border-radius: 0px; position: relative; left: 150px;">
-                    <p style="margin-top: 50px;">
+                    <p style="text-align: justify; margin-top: 50px;">
                         We first developed and tested the entire system in simulation using <b>Gazebo</b> and <b>ROS</b>, which allowed us to efficiently validate the UR3 arm’s performance before transferring it to the real world.
                     </p>
                     <img src="assets/img/portfolio/img_chess2.png" alt="Descripción de la imagen" style="margin-top: 10px; width: 60%; height: auto; border-radius: 0px; position: relative; left: 150px;">
-                    <p style="margin-top: 30px;">
+                    <p style="text-align: justify; margin-top: 30px;">
                         You can check the source code on <b>GitHub</b> using the following link:
                         <a href="https://github.com/marcarias/chess_project" target="_blank" style="color: #007bff; text-decoration: none;">
                             GitHub Repository
