--- a/socialforcemodel_file.html
+++ b/socialforcemodel_file.html
@@ -122,26 +122,26 @@
 
                     <!-- Agregar una imagen debajo del texto -->
                     <img src="assets/img/portfolio/img_socialforce4.png" alt="Descripción de la imagen" style="margin-top: 15px; max-width: 90%; height: auto; border-radius: 10px;">
-                    <p style="margin-top: 10px;">
+                    <p style="text-align: justify; margin-top: 10px;">
                         The <b>Social Force Model</b> it’s a mathematical model used to simulate the behavior of mobile robots and its interaction with the people and other objects in its social environment.
                     </p>
                     <img src="assets/img/portfolio/img_socialforce5.png" alt="Descripción de la imagen" style="margin-top: 0px; width: 70%; height: auto; border-radius: 0px; position: relative; left: 75px;">
-                    <p style="margin-top: 30px;">
+                    <p style="text-align: justify; margin-top: 30px;">
                         Three different scenarios have been simulated.
                     </p>
-                    <p style="margin-top: 50px; font-weight: bold; text-decoration: underline;">
+                    <p style="text-align: justify; margin-top: 50px; font-weight: bold; text-decoration: underline;">
                         Scenario 1: Single Obstacle Avoidance
                     </p>
                     <img src="assets/img/portfolio/gif_socialforcemodel1.gif" alt="Descripción de la imagen" style="margin-top: 0px; width: 40%; height: auto; border-radius: 0px; position: relative; left: 175px;">
-                    <p style="margin-top: 50px; font-weight: bold; text-decoration: underline;">
+                    <p style="text-align: justify; margin-top: 50px; font-weight: bold; text-decoration: underline;">
                         Scenario 2: Multiple Obstacle Avoidance
                     </p>
                     <img src="assets/img/portfolio/gif_socialforcemodel2.gif" alt="Descripción de la imagen" style="margin-top: 0px; width: 40%; height: auto; border-radius: 0px; position: relative; left: 175px;">
-                    <p style="margin-top: 50px; font-weight: bold; text-decoration: underline;">
+                    <p style="text-align: justify; margin-top: 50px; font-weight: bold; text-decoration: underline;">
                         Scenario 3: Dynamic Obstacle Avoidance (Person)
                     </p>
                     <img src="assets/img/portfolio/gif_socialforcemodel3.gif" alt="Descripción de la imagen" style="margin-top: 0px; width: 40%; height: auto; border-radius: 0px; position: relative; left: 175px;">
-                    <p style="margin-top: 50px;">
+                    <p style="text-align: justify; margin-top: 50px;">
                         You can check the full source code on <b>GitHub</b> using the following link:
                         <a href="https://github.com/marcarias/mobile_robots/tree/main/MATLAB_obstacle_avoidance" target="_blank" style="color: #007bff; text-decoration: none;">
                             GitHub Repository
