--- a/tfg_file.html
+++ b/tfg_file.html
@@ -101,10 +101,10 @@
               <img src="assets/img/portfolio/img_tfg_portada.png" alt="Descripción de la imagen" style="margin-top: 15px; max-width: 100%; height: auto; border-radius: 10px;">
               <p style="font-style: italic; margin-top: 15px;"><strong>Supervisor:</strong> - </p>
               <p style="font-style: italic; margin-top: -15px;"><strong>PI:</strong> Carlos Sierra Garriga</p>
-              <p style="margin-top: 10px;">
+              <p style="text-align: justify; margin-top: 10px;">
                 This document is based on the <b>design of an automatic assembly module for parts</b>, aimed at performing tasks that are both heavy and repetitive for operators. The process involves the assembly of brass clamps.
               </p>
-              <p>
+              <p style="text-align: justify;">
                 <b>Five independent phases</b> are defined, which together constitute the automated process. Prior to this, machinery and electronic components have been selected. Additionally, some custom elements have been manufactured, and specific mechanisms have been designed to ensure proper functionality. Using the <b>SolidWorks CAD software</b> for mechanical modeling, each stage of the process has been defined, followed by the assembly of the complete module as a final solution.
               </p>
 
@@ -162,7 +162,7 @@
                 <div class="swiper-button-prev"></div>
               </div>
 
-              <p style= "margin-top: 30px;">
+              <p style= "text-align: justify; margin-top: 30px;">
                 Three out of the five phases of the automated process involve UR3 articulated robots. For this reason, virtual simulations were conducted using the <b>URSim offline simulation software</b>. Subsequently, these programs were transferred to the laboratory to subject the robot to a real working environment and verify its proper operation, enabling accurate calculation of cycle times.
               </p>
 
@@ -189,7 +189,7 @@
               </div>
 
               
-              <p style= "margin-top: 30px;">
+              <p style= "text-align: justify; margin-top: 30px;">
                 Once the technical aspect of the project is completed, a plan for the implementation of this module is established, along with the preparation of a budget and an evaluation of the economic feasibility of the investment.
               </p>
             </div>
