--- a/tfm_file.html
+++ b/tfm_file.html
@@ -123,13 +123,13 @@
                     <img src="assets/img/portfolio/img_webots.png" alt="Descripción de la imagen" style="margin-top: 15px; max-width: 100%; height: auto; border-radius: 10px;">
                     <p style="font-style: italic; margin-top: 15px;"><strong>Supervisor:</strong> Wanting Jin</p>
                     <p style="font-style: italic; margin-top: -15px;"><strong>PI:</strong> Alcherio Martinoli</p>
-                    <p style="margin-top: 10px;">
+                    <p style="text-align: justify; margin-top: 10px;">
                         The deployment of robots for <strong>Gas Source Localization (GSL)</strong> tasks in hazardous scenarios significantly reduces risks to humans and animals, given their autonomy and sensing capability for gas and wind. Probabilistic GSL algorithms infer the source position efficiently from scattered measurements and make informed navigation decisions. The belief of a candidate source position is updated by comparing the actual measurements and the expected concentrations derived from the gas model.
                     </p>
-                    <p>
+                    <p style="text-align: justify;">
                         The application of <strong>Multi-Robot Systems (MRS)</strong> in this field offers a promising research direction, particularly for enhancing information gathering procedures in time-critical applications. However, when employing an MRS where each robot builds a belief map of the source position based on its own measurements, the challenges of merging belief maps across robots and leveraging differences in their estimations to develop more efficient navigation strategies remain unexplored.
                     </p>
-                    <p>
+                    <p style="text-align: justify;">
                         This project aims to investigate the deployment of MRS for GSL tasks, focusing on <strong>belief sharing and merging between robots</strong>. The proposed approach will be evaluated in the high-fidelity robotic simulator, Webots.
                     </p>
                 </div>
