--- a/ballintube_file.html
+++ b/ballintube_file.html
@@ -137,10 +137,10 @@
                     <p style="margin-top: 10px;">
                         <b style="color: rgb(0, 8, 255);">*The purpose of the experiment in the video is to stabilize the ping-pong ball near the upper elastic band</b>
                     </p>
-                    <p style="margin-top: 30px;">
+                    <p style="text-align: justify; margin-top: 30px;">
                         In this project, we implemented and tested <b>four different control strategies</b> to manage the <b>vertical position of a ping-pong ball suspended in a tube by a fan</b>. Using an <b>Arduino</b> with <b>FreeRTOS</b>, we explored <b>ON/OFF control</b>, <b>hysteresis</b>, <b>simple feedback</b>, and a <b>PID controller</b> to regulate the ball's height as it switched between two setpoints every 10 seconds. By analyzing system performance under each method, we observed how control precision and responsiveness improved progressively, culminating in the <b>PID controller</b>, which showed the most promise—especially when adjusting setpoint intervals.
                     </p>
-                    <p style="margin-top: 0px;">
+                    <p style="text-align: justify; margin-top: 0px;">
                         You can find the full detailed explanation of the project on <a href="assets/pdf/embedded_ballintube.pdf" target="_blank">this PDF</a>.
                     </p>
 
