--- a/flowers_file.html
+++ b/flowers_file.html
@@ -131,7 +131,7 @@
                     <video autoplay muted loop style="margin-top: 0px; width: 100%; height: auto; border-radius: 0px; position: relative; left: 0px;">
                         <source src="assets/vid/vid_flower_counting_b.mp4" type="video/mp4">
                         Your browser does not support the video tag.
-                    </video> <p style="margin-top: 10px;">
+                    </video> <p style="text-align: justify; margin-top: 10px;">
                         Counting flowers in real time has been transformed with the integration of <b>AI Computer Vision methods</b>, specifically <b>Object Detection techniques</b>. This cutting-edge approach identifies and tracks individual flowers within live images or video feeds, enabling accurate and dynamic monitoring. By pinpointing flower locations and quantities, researchers and environmentalists can gather precise data effortlessly, driving deeper insights into plant growth, biodiversity, and ecological changes.
                     </p>
                     <p style="margin-top: 30px;">
