--- a/injurypred_file.html
+++ b/injurypred_file.html
@@ -121,13 +121,13 @@
 
                     <!-- Agregar una imagen debajo del texto -->
                     <img src="assets/img/portfolio/img_injury1.jpg" alt="Descripción de la imagen" style="margin-top: 15px; max-width: 100%; height: auto; border-radius: 10px;">
-                    <p style="margin-top: 10px;">
+                    <p style="text-align: justify; margin-top: 10px;">
                         Anticipating player injuries has become a crucial priority for professional clubs. This project explores the application of <b>machine learning algorithms</b>, such as <b>Convolutional Neural Networks (CNN)</b> and <b>Support Vector Machines (SVM)</b>, to predict injuries based solely on official match statistics. 
                     </p>
-                    <p style="margin-top: 0px;">
+                    <p style="text-align: justify; margin-top: 0px;">
                         Using <b>web scraping techniques</b> to collect data from specialized platforms, and after a thorough process of data cleaning, dimensionality reduction, and model training, a system was developed to detect <b>patterns</b> that could signal the risk of muscular injuries. Although the model faces challenges—especially due to the lack of training data and the natural imbalance between injured and non-injured players—the results highlight the promising potential of artificial intelligence as a proactive tool for <b>injury prevention in professional sports</b>.
                     </p>    
-                    <p style="margin-top: 0px;">
+                    <p style="text-align: justify; margin-top: 0px;">
                         You can find the full detailed explanation of the project on <a href="assets/pdf/ml_injury.pdf" target="_blank">this PDF</a>.
                     </p>
 
